--- a/news.css
+++ b/news.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian:wght@100..900&display=swap');
+
 body {
     background-color: #1D2A35;
 
@@ -11,4 +14,44 @@ body {
                         width: 100%;
                     }
             }
+}
+.conteneur  {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    background-color: var(--bgc-block);
+    border-radius: 10px;
+    border:inset  2px rgba(255, 255, 255, 0.429);
+    /* padding:10px 10px; */
+    height: auto;
+    width:80%;
+    margin: 0 auto;
+                
+
+                article{
+                    display: flex;
+                    background-color: red;
+                    border: 1px solid white;
+                        img {
+                                width: 200px;
+                                
+                        }
+                    .TP{   
+                        display:flex;
+                        flex-direction: column;
+                        
+                        
+                        p { 
+                            color:white;
+
+                        }
+                        h3{
+                            color: white;
+                        }
+                        
+                }
+            }
+    
 }
