--- a/news.css
+++ b/news.css
@@ -8,16 +8,24 @@ body {
                 height: 20%;
                 width: 100%;
                 padding-bottom: 10px;
-
-                    img{
-                        height: 300px;
-                        width: 100%;
-                    }
-                    h2 {
-                        color: white;
-                    }
+                
+                img{
+                    height: 300px;
+                    width: 100%;
+                }
             }
+        }
+        
+        
+        h2 {
+            color: white;
+        }
+
+        
+        .modèle {  
+    width: 50%;
 }
+  
 .conteneur  {
     display: flex;
     flex-direction: row;
@@ -37,10 +45,7 @@ body {
                     display: flex;
                     background-color:#334A5E;
                     border: 1px solid white;
-                        img {
-                                width: 50%;
-                                
-                        }
+                        
                     .TP{   
                         display:flex;
                         flex-direction: column;
@@ -60,3 +65,169 @@ body {
             }
     
 }
+.conteneur2 {     
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    background-color: var(--bgc-block);
+    border-radius: 10px;
+    border:inset  2px rgba(255, 255, 255, 0.429);
+    /* padding:10px 10px; */
+    height: auto;
+    width:80%;
+    margin: 0 auto;
+
+                article{
+                    display: flex;
+                    background-color:#334A5E;
+                    border: 1px solid white;
+        
+                    .TP2{   
+                        display:flex;
+                        flex-direction: column;
+                        
+                        
+                        
+                        p { 
+                            color:white;
+
+                        }
+                        h3{
+                            color: white;
+                            justify-content: center;
+                        }
+                        
+                }
+            }
+
+
+}
+.conteneur3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    background-color: var(--bgc-block);
+    border-radius: 10px;
+    border:inset  2px rgba(255, 255, 255, 0.429);
+    /* padding:10px 10px; */
+    height: auto;
+    width:80%;
+    margin: 0 auto;
+
+                article{
+                    display: flex;
+                    background-color:#334A5E;
+                    border: 1px solid white;
+                        
+                    .TP3{   
+                        display:flex;
+                        flex-direction: column;
+                        
+                        
+                        
+                        p { 
+                            color:white;
+
+                        }
+                        h3{
+                            color: white;
+                            justify-content: center;
+                        }
+                        
+                }
+            }
+
+}
+
+
+
+
+
+
+        .conteneur4 {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1rem;
+            background-color: var(--bgc-block);
+            border-radius: 10px;
+            border:inset  2px rgba(255, 255, 255, 0.429);
+            /* padding:10px 10px; */
+            height: auto;
+            width:80%;
+            margin: 0 auto;
+            box-sizing: border-box;
+
+                        article{
+                            display: flex;
+                            background-color:#334A5E;
+                            border: 1px solid white;
+                            min-height: 293px;
+                                
+                            .TP4{   
+                                display:flex;
+                                flex-direction: column;
+                                
+                                
+                                
+                                p { 
+                                    color:white;
+
+                                }
+                                h3{
+                                    color: white;
+                                    justify-content: center;
+                                }
+                                .modèle {
+                                    width: 50%;
+                                            
+                                }
+                        }
+                    }
+        }
+        /* .conteneur5 {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1rem;
+            background-color: var(--bgc-block);
+            border-radius: 10px;
+            border:inset  2px rgba(255, 255, 255, 0.429);
+            height: auto;
+            width:80%;
+            margin: 0 auto;
+
+                        article{
+                            display: flex;
+                            background-color:#334A5E;
+                            border: 1px solid white;
+                                
+                                        
+                                }
+                            .TP5{   
+                                display:flex;
+                                flex-direction: column;
+
+                                
+                                
+                                
+                                p { 
+                                    color:white;
+
+                                }
+                                h7{
+                                    color:white;
+                                    justify-content: center;
+                                }
+                                
+                        }
+                    } */
+
+            
+                
