--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,156 @@
     --typoSecondaire: 'Inter', sans-serif;
 }
 
+* {
+    list-style: none;
+    text-decoration: none;
+    font-family: var(--typoPrincipal);
+}
+
 body {
     background-color: #1D2A35;
     margin: 0;
     color: #DADADA;
+    list-style: none;
+    text-decoration: none;
 }
 
 header {
+    .test {
+        background: linear-gradient(rgba(160, 51, 51, 0), #1d2a35fd),
+            url(./assets/logo_gastronomie.jpeg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+
+        width: 100%;
+        height: 30vh;
+        position: relative;
+        margin-top: 0;
+        padding-bottom: 100px;
+    }
+
+    nav {
+        display: flex;
+        color: var(--couleur3);
+        align-items: center;
+        justify-content: space-between;
+        width: 90vh;
+        padding: 10px 2rem;
+        border-radius: 50px;
+        background-color: rgba(29, 42, 53, 0.7);
+        backdrop-filter: blur(3px);
+        border: 2px solid rgba(44, 89, 128, 0.5);
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+        position: fixed;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 10;
+        transition: all 0.3s ease;
+        font-family: var(--typoPrincipal);
+    }
+
+    nav.shrink {
+        width: 60vh;
+        padding: 6px 1rem;
+        border-radius: 25px;
+    }
+
+    nav p {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin: 0;
+    }
+
+    nav a {
+        color: var(--text-color);
+    }
+
+    nav ul {
+        display: flex;
+        gap: 1.5rem;
+        margin-left: 0rem;
+        text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+    }
+
+    nav ul a.default {
+        color: var(--color-segondary);
+        text-decoration: underline 2px;
+        text-underline-offset: 10px;
+    }
+
+    nav.shrink ul a.default {
+        text-underline-offset: 5px;
+    }
+
+    nav ul a:hover {
+        transition: 0.3s;
+        color: var(--color-segondary);
+        text-decoration: underline 2px;
+        text-underline-offset: 10px;
+    }
+
+    nav.shrink ul a:hover {
+        text-underline-offset: 2px;
+    }
+
+    .search-bar {
+        width: 30vh;
+        margin-right: 0rem;
+        padding: 7px 10px;
+        font-size: 1rem;
+        border: 1px solid var(--border-color, #ccc);
+        border-radius: 25px;
+        outline: none;
+        transition: all 0.1s ease;
+        background-color: rgba(190, 190, 190, 0.171);
+        color: var(--text-color);
+    }
+
+    nav.shrink .search-bar {
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0s 0.7s;
+    }
+
+    .search-bar::placeholder {
+        color: var(--placeholder-color, #aaa);
+        font-style: italic;
+    }
+
+    .search-icon {
+        position: absolute;
+        right: 3rem;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 18px;
+        color: white;
+        pointer-events: none;
+    }
+
+    nav.shrink .search-icon {
+        right: 1rem;
+    }
+
+    .search-icon-i {
+        position: absolute;
+        right: 60rem;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 18px;
+        color: white;
+    }
+
+    nav.shrink .search-icon-i {
+        right: 34rem;
+    }
+}
+
+/* header {
+    
+
+
     background: linear-gradient(rgba(160, 51, 51, 0), #1d2a35fd),
         url(./assets/logo_gastronomie.jpeg);
     background-repeat: no-repeat;
@@ -34,7 +177,7 @@ header {
     position: sticky;
     top: 0;
     z-index: -1;
-}
+} */
 
 
 
