page gastro, manque que les pages restaurants

--- a/gastronomie/gastronomie.css
+++ b/gastronomie/gastronomie.css
@@ -13,15 +13,6 @@
     --transition-duration: 0.5s;
 }
 
-:root {
-    --couleur1: #1D2A35;
-    --couleur2: #334A5E;
-    --couleur3: #DADADA;
-    --typoPrincipal: 'Montserrat', sans-serif;
-    --typoSecondaire: 'Inter', sans-serif;
-}
-
-
 body {
     background-color: #1D2A35;
     margin: 0;
@@ -162,220 +153,26 @@ header {
     }
 }
 
-.featured-article {
-    background-color: var(--couleur2);
-    color: var(--couleur3);
-    text-align: left;
-    margin-bottom: 40px;
-    width: 80%;
-    margin: 40px auto;
-    border: 1px solid var(--couleur3);
-    border-radius: 8px;
-    z-index: 1;
-    
-
-    @media screen and (max-width: 1130px) {
-        display: none;
-    }
-
-    article {
-        display: flex;
-        max-width: 100%;
-        gap: 40px;
-
-        div {
-            padding: 10px;
-        }
-
-        .B1 {
-            background-color: var(--couleur2);
-            color: var(--couleur3);
-            border: 1px solid var(--couleur2);
-            border-radius: 4px;
-            font-size: 20px;
-            margin-left: 150px;
-        }
-
-        .B1:hover {
-            border: 1px solid var(--couleur3)
-        }
-
-        .B2 {
-            background-color: var(--couleur2);
-            color: var(--couleur3);
-            border: 1px solid var(--couleur3);
-            border-radius: 4px;
-            font-size: 20px;
-        }
-
-        .B2:hover {
-            border: 1px solid var(--couleur3);
-            background-color: var(--couleur1);
-        }
-
-        @media screen and (max-width: 1130px) {
-            display: flex;
-            flex-direction: column;
-
-            div {
-                padding: 20px;
-            }
-        }
-    }
-
-}
-
-#featured-image {
-    width: 600px;
-    min-width: 300px;
-    margin: 0;
-    border-radius: 8px 0px 0px 8px;
-
-    @media screen and (max-width: 1130px) {
-        width: 100%;
-        border-radius: 8px 8px 0px 0px;
-    }
-}
-
-/* Fin Article en avant */
-
-/* Début de la section Carrousel */
-.carrousel-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    width: 80%;
-    margin: 40px auto;
-}
-
-.carrousel {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    transition: transform 0.5s ease-in-out;
-
-
-    @media screen and (max-width: 1130px) {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-/* Fin de la section Carrousel */
-/* Début des articles du Carrousel */
-.carrousel-item {
-    min-width: 33%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--couleur2);
-    border: 1px solid var(--couleur3);
-    border-radius: 8px;
-    text-align: center;
-
-    h2 {
-        padding-bottom: 10px;
-    }
-
-    span {
-        padding-bottom: 10px;
-
-        @media screen and (max-width: 1130px) {
-            display: none;
-        }
-    }
-
-    p {
-        display: none;
-
-        @media screen and (max-width: 1130px) {
-            display: block;
-        }
-    }
-}
-
-.carrousel-item:hover {
-    transition: ease-in-out 0.8s;
-    scale: 1.02;
-}
-
-.carrousel-item img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px 8px 0px 0px;
-    margin-bottom: 20px;
-}
-
-.carrousel-item h2 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-}
-
-.carrousel-item p {
-    font-size: 1rem;
-    color: var(--couleur3);
-}
-
-/* Fin des articles du Carrousel */
-/* Décoration des boutons du Carrousel */
-.test1 {
-    position: relative;
-    left: -50px;
-
-}
-
-.test2 {
-    position: relative;
-    left: 50px;
-
-}
-
-/* button {
-    background-color: var(--couleur1);
-    color: var(--couleur3);
-    border-radius: 50%;
-    border: none;
-    font-size: 25px;
-    position: absolute;
-    z-index: 1;
-
-    @media screen and (max-width: 1130px) {
-        display: none;
-    }
-} */
-
-button:focus {
-    outline: none;
-}
-
-.prev {
-    left: 10px;
-}
-
-.next {
-    right: 10px;
-}
-
-button:hover {
-    background-color: var(--couleur3);
-    color: var(--couleur1);
-    transition: ease-in-out 0.2s;
-}
-
-
 main {
     width: 100vw;
     height: 100%;
     background-color: var(--background-color);
     color: var(--color-text);
 }
+h1 {
+    text-align: center;
+}
 
-.bars {
+h2 {
+    margin-left: 5rem;
+}
+.bars,
+.restaurants {
     margin-bottom: 3px;
 }
 
-.img_bar {
+.img_bar,
+.img_restaurant {
     max-width: 50%;
     min-width: 350px;
     height: auto;
@@ -389,6 +186,9 @@ main {
 }
 
 .mise_en_avant,
+.volière,
+.poules,
+.coq,
 .roti,
 .caille,
 .perchoir {
@@ -428,7 +228,8 @@ main {
     }
 }
 
-.img_bar2 {
+.img_bar2,
+.img_restaurant2 {
     width: 100%;
     height: auto;
     border-radius: 8px;
